--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1338,10 +1338,50 @@ section {
   }
 }
 
+@media only screen and (min-width: 1100px) and (max-height: 640px) {
+  .logotype--svg-container {
+    grid-column: 2 / 5;
+    grid-row: 1;
+    margin-top: var(--header-height-desktop);
+  }
+}
+
+@media only screen and (max-width: 1080px) and (min-width: 1100px) and (min-height: 760px) {
+  .logotype--svg-container {
+    grid-row: 2!important;
+  }
+}
+
+@media only screen and (min-width: 640px) {
+  .logotype--svg-container {
+    grid-row: 1;
+    margin-top: var(--header-height-desktop);
+    padding-top: 0;
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  .logotype--svg-container {
+    grid-row: 2;
+    grid-column: 1 / 5;
+    margin-top: 0;
+    margin-top: -44px;
+  }
+}
+
+@media only screen and (min-width: 840px) {
+  .intro-text-container {
+    grid-row: 1;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .intro-text-desktop {
+    font-size: 1.5rem!important;
+  }
+}
+
 @media only screen and (min-width: 1360px) {
-  /* .media {
-    height: 100%!important;
-  } */
   #aboutTriggerdesktop {
     display: block;
   }
@@ -1426,12 +1466,6 @@ section {
   }
   .logotype--svg-container {
     transition: opacity 0.35s ease-in-out;
-  }
-}
-
-@media only screen and (min-width: 1601px) {
-  .intro-text-desktop {
-    font-size: 1.5rem;
   }
 }
 
@@ -5718,7 +5752,7 @@ svg#menuPlusClose.menu--svg-arrow-down {
   .mdt\:grid-col-1-2--important {
     grid-column: 1 / 2!important;
   }
-  .mdt\:grid-col-1-3{
+  .mdt\:grid-col-1-3 {
     grid-column: 1 / 3;
   }
   .mdt\:grid-col-1-3-important {
@@ -5780,6 +5814,9 @@ svg#menuPlusClose.menu--svg-arrow-down {
   }
   .mdta\:grid-col-1-3 {
     grid-column: 1 / 3;
+  }
+  .mdta\:grid-col-1-3--important {
+    grid-column: 1 / 3!important;
   }
   .mdta\:grid-col-1-4 {
     grid-column: 1 / 4;
@@ -6433,6 +6470,9 @@ svg#menuPlusClose.menu--svg-arrow-down {
   }
   .lgma\:grid-col-1-3 {
     grid-column: 1 / 3;
+  }
+  .lgma\:grid-col-1-5 {
+    grid-column: 1 / 5;
   }
 }
 
