--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1352,6 +1352,12 @@ section {
   }
 }
 
+@media only screen and (max-height: 760px) {
+  .logotype--svg-container {
+    grid-row: 1!important;
+  }
+}
+
 @media only screen and (min-width: 640px) {
   .logotype--svg-container {
     grid-row: 1;
@@ -1366,6 +1372,27 @@ section {
     grid-column: 1 / 5;
     margin-top: 0;
     margin-top: -44px;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .intro-text-container {
+    grid-column: 1 / 3;
+  }
+  .intro-text-desktop {
+    font-size: 1.2rem;
+  }
+  .logotype--svg-container {
+    grid-row: 2;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .intro-text-container {
+    grid-column: 1 / 2;
+  }
+  .logotype--svg-container {
+    grid-row: 1;
   }
 }
 
@@ -5195,6 +5222,9 @@ svg#menuPlusClose.menu--svg-arrow-down {
 }
 
 @media only screen and (max-width: 640px) {
+  .md\:mt-negative-s {
+    margin-top: -1rem;
+  }
   .md\:gap-s {
     gap: 1rem;
   }
