--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1332,29 +1332,42 @@ section {
   }
 }
 
+@media only screen and (max-width: 960px) {
+  .logotype--svg-container {
+    grid-column: 1 / 5!important;
+  }
+}
+
 @media only screen and (max-width: 1360px) {
   #aboutTriggerDesktop {
     display: none;
   }
 }
 
-@media only screen and (min-width: 1100px) and (max-height: 640px) {
+@media only screen and (min-width: 1100px) and (min-height: 800px) {
   .logotype--svg-container {
-    grid-column: 2 / 5;
-    grid-row: 1;
-    margin-top: var(--header-height-desktop);
+    grid-row: 2;
   }
 }
 
-@media only screen and (max-width: 1080px) and (min-width: 1100px) and (min-height: 760px) {
-  .logotype--svg-container {
-    grid-row: 2!important;
-  }
-}
 
 @media only screen and (max-height: 760px) {
   .logotype--svg-container {
+    margin-top: var(--header-height-desktop)!important;
     grid-row: 1!important;
+    grid-column: 2 / 5;
+  }
+}
+
+@media only screen and (max-width: 760px) and (max-height: 760px) {
+  .logotype--svg-container {
+    grid-row: 2;
+  }
+}
+
+@media only screen and (max-width: 960px) and (max-height: 760px) {
+  .logotype--svg-container {
+    grid-column: 3 / 5!important;
   }
 }
 
@@ -1369,7 +1382,7 @@ section {
 @media only screen and (max-width: 1100px) {
   .logotype--svg-container {
     grid-row: 2;
-    grid-column: 1 / 5;
+    grid-column: 2 / 5;
     margin-top: 0;
     margin-top: -44px;
   }
@@ -1382,9 +1395,9 @@ section {
   .intro-text-desktop {
     font-size: 1.2rem;
   }
-  .logotype--svg-container {
+  /* .logotype--svg-container {
     grid-row: 2;
-  }
+  } */
 }
 
 @media only screen and (min-width: 1280px) {
