--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1332,7 +1332,7 @@ section {
   }
 }
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 1024px) {
   .logotype--svg-container {
     grid-column: 1 / 5!important;
   }
@@ -1350,12 +1350,27 @@ section {
   }
 }
 
+@media only screen and (min-width: 640px) and (max-width: 1024px) and (max-height: 600px) {
+  .logotype--svg-container {
+    grid-column: 3 / 5!important;
+  }
+}
 
-@media only screen and (max-height: 760px) {
+@media only screen and (min-width: 640px) and (max-width: 1280px) {
+  .logotype--svg-container {
+    margin-top: 0!important;
+  }
+}
+
+
+@media only screen and (max-height: 800px) {
   .logotype--svg-container {
     margin-top: var(--header-height-desktop)!important;
     grid-row: 1!important;
     grid-column: 2 / 5;
+  }
+  .intro-text-desktop {
+    font-size: 1rem!important;
   }
 }
 
@@ -1369,11 +1384,14 @@ section {
   .logotype--svg-container {
     grid-column: 3 / 5!important;
   }
+  .intro-text-container {
+    grid-column: 1 / 3!important;
+  }
 }
 
 @media only screen and (min-width: 640px) {
   .logotype--svg-container {
-    grid-row: 1;
+    /* grid-row: 1; */
     margin-top: var(--header-height-desktop);
     padding-top: 0;
   }
@@ -1392,12 +1410,15 @@ section {
   .intro-text-container {
     grid-column: 1 / 3;
   }
-  .intro-text-desktop {
-    font-size: 1.2rem;
-  }
-  /* .logotype--svg-container {
-    grid-row: 2;
+  /* .intro-text-desktop {
+    font-size: 1.5rem;
   } */
+}
+
+@media only screen and (min-width: 760px) {
+  .intro-text-desktop {
+    font-size: 1.5rem;
+  }
 }
 
 @media only screen and (min-width: 1280px) {
@@ -1412,6 +1433,12 @@ section {
 @media only screen and (min-width: 840px) {
   .intro-text-container {
     grid-row: 1;
+  }
+}
+
+@media only screen and (min-width: 640px) and (max-width: 960px)  {
+  .intro-text-container {
+    grid-column: 1 / 5;
   }
 }
 
@@ -1542,7 +1569,7 @@ section {
 @media only screen and (max-width: 640px) {
   .logotype--svg-container {
     grid-column: 1 / 3!important;
-    margin-top: 0rem!important;
+    margin-top: 0!important;
   }
 }
 
