--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1350,9 +1350,23 @@ section {
   }
 }
 
+/* @media only screen and (max-width: 960px) and (min-height: 640px) {
+  .logotype--svg-container {
+    grid-row: 2!important;
+    grid-column: 2 / 5!important;
+  }
+  .intro-text-desktop {
+    grid-column: 1 / 3!important;
+  }
+} */
+
 @media only screen and (min-width: 640px) and (max-width: 1024px) and (max-height: 600px) {
   .logotype--svg-container {
     grid-column: 3 / 5!important;
+    grid-row: 2!important;
+  }
+  .intro-text-desktop {
+    grid-column: 1 / 3!important;
   }
 }
 
@@ -1362,8 +1376,7 @@ section {
   }
 }
 
-
-@media only screen and (max-height: 800px) {
+@media only screen and (max-height: 860px) {
   .logotype--svg-container {
     margin-top: var(--header-height-desktop)!important;
     grid-row: 1!important;
@@ -1374,15 +1387,24 @@ section {
   }
 }
 
+@media only screen and (min-height: 760px) and (max-width: 1100px) {
+  .logotype--svg-container {
+    margin-top: 0!important;
+    grid-row: 2!important;
+  }
+}
+
 @media only screen and (max-width: 760px) and (max-height: 760px) {
   .logotype--svg-container {
     grid-row: 2;
   }
 }
 
-@media only screen and (max-width: 960px) and (max-height: 760px) {
+@media only screen and (max-width: 1100px) and (max-height: 800px) {
   .logotype--svg-container {
     grid-column: 3 / 5!important;
+    grid-row: 1!important;
+    margin-top: 44px!important;
   }
   .intro-text-container {
     grid-column: 1 / 3!important;
