--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1344,9 +1344,12 @@ section {
   }
 }
 
-@media only screen and (min-width: 1100px) and (min-height: 800px) {
+@media only screen and (min-width: 1280px) and (min-height: 800px) {
   .logotype--svg-container {
     grid-row: 2;
+  }
+  .intro-text-container {
+    grid-column: 1 /3!important;
   }
 }
 
@@ -1370,12 +1373,6 @@ section {
   }
 }
 
-@media only screen and (min-width: 640px) and (max-width: 1280px) {
-  .logotype--svg-container {
-    margin-top: 0!important;
-  }
-}
-
 @media only screen and (max-height: 860px) {
   .logotype--svg-container {
     margin-top: var(--header-height-desktop)!important;
@@ -1392,6 +1389,9 @@ section {
     margin-top: 0!important;
     grid-row: 2!important;
   }
+  .intro-text-container {
+    grid-column: 1 / 3!important;
+  }
 }
 
 @media only screen and (max-width: 760px) and (max-height: 760px) {
@@ -1400,7 +1400,7 @@ section {
   }
 }
 
-@media only screen and (max-width: 1100px) and (max-height: 800px) {
+@media only screen and (max-width: 2500px) and (max-height: 760px) {
   .logotype--svg-container {
     grid-column: 3 / 5!important;
     grid-row: 1!important;
@@ -1419,6 +1419,30 @@ section {
   }
 }
 
+@media only screen and (min-width: 760px) and (max-width: 1360px) and (max-height: 760px) {
+  .intro-text-container {
+    grid-column: 1 / 3!important;
+  }
+}
+
+/* @media only screen and (min-width: 1100px) and (max-width: 1280px) and (min-height: 640px) {
+  .logotype--svg-container {
+    margin-top: 0!important;
+  }
+} */
+
+@media only screen and (min-width: 640px) and (max-width: 760px) and (min-height: 760px) {
+  .intro-text-container {
+    grid-column: 1 / 5!important;
+  }
+}
+
+@media only screen and (min-width: 640px) and (max-width: 1100px) {
+  .intro-text-desktop {
+    font-size: 1.25rem!important;
+  }
+}
+
 @media only screen and (max-width: 1100px) {
   .logotype--svg-container {
     grid-row: 2;
@@ -1428,37 +1452,42 @@ section {
   }
 }
 
-@media only screen and (min-width: 1100px) {
-  .intro-text-container {
-    grid-column: 1 / 3;
-  }
-  /* .intro-text-desktop {
-    font-size: 1.5rem;
-  } */
-}
-
 @media only screen and (min-width: 760px) {
   .intro-text-desktop {
     font-size: 1.5rem;
   }
 }
 
-@media only screen and (min-width: 1280px) {
-  .intro-text-container {
-    grid-column: 1 / 2;
+@media only screen and (max-width: 760px) {
+  .intro-text-desktop {
+    grid-column: 1 / 5;
   }
+}
+
+@media only screen and (min-width: 760px) and (max-width: 1280px)  {
+  .intro-text-container {
+    grid-column: 1 / 3;
+  }
+}
+
+
+@media only screen and (min-width: 1280px) {
   .logotype--svg-container {
     grid-row: 1;
   }
-}
-
-@media only screen and (min-width: 840px) {
   .intro-text-container {
-    grid-row: 1;
+    grid-column: 1 / 2!important;
   }
 }
 
-@media only screen and (min-width: 640px) and (max-width: 960px)  {
+@media only screen and (min-width: 1280px) {
+  .intro-text-container {
+    grid-row: 1;
+    grid-column: 1 / 2;
+  }
+}
+
+@media only screen and (min-width: 640px) and (max-width: 840px)  {
   .intro-text-container {
     grid-column: 1 / 5;
   }
