--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1203,8 +1203,8 @@ section {
   display: flex;
   width: 100%;
   height: auto;
-  grid-column: 2 / 5;
   transition: opacity 0.35s ease-in-out; /* Add transition properties */
+  grid-column: 1 / 5;
 }
 
 .logotype--svg-inner {
@@ -1332,172 +1332,12 @@ section {
   }
 }
 
-@media only screen and (max-width: 1024px) {
-  .logotype--svg-container {
-    grid-column: 1 / 5!important;
-  }
-}
-
 @media only screen and (max-width: 1360px) {
   #aboutTriggerDesktop {
     display: none;
   }
 }
 
-@media only screen and (min-width: 1280px) and (min-height: 800px) {
-  .logotype--svg-container {
-    grid-row: 2;
-  }
-  .intro-text-container {
-    grid-column: 1 /3!important;
-  }
-}
-
-/* @media only screen and (max-width: 960px) and (min-height: 640px) {
-  .logotype--svg-container {
-    grid-row: 2!important;
-    grid-column: 2 / 5!important;
-  }
-  .intro-text-desktop {
-    grid-column: 1 / 3!important;
-  }
-} */
-
-@media only screen and (min-width: 640px) and (max-width: 1024px) and (max-height: 600px) {
-  .logotype--svg-container {
-    grid-column: 3 / 5!important;
-    grid-row: 2!important;
-  }
-  .intro-text-desktop {
-    grid-column: 1 / 3!important;
-  }
-}
-
-@media only screen and (max-height: 860px) {
-  .logotype--svg-container {
-    margin-top: var(--header-height-desktop)!important;
-    grid-row: 1!important;
-    grid-column: 2 / 5;
-  }
-  .intro-text-desktop {
-    font-size: 1rem!important;
-  }
-}
-
-@media only screen and (min-height: 760px) and (max-width: 1100px) {
-  .logotype--svg-container {
-    margin-top: 0!important;
-    grid-row: 2!important;
-  }
-  .intro-text-container {
-    grid-column: 1 / 3!important;
-  }
-}
-
-@media only screen and (max-width: 760px) and (max-height: 760px) {
-  .logotype--svg-container {
-    grid-row: 2;
-  }
-}
-
-@media only screen and (max-width: 2500px) and (max-height: 760px) {
-  .logotype--svg-container {
-    grid-column: 3 / 5!important;
-    grid-row: 1!important;
-    margin-top: 44px!important;
-  }
-  .intro-text-container {
-    grid-column: 1 / 3!important;
-  }
-}
-
-@media only screen and (min-width: 640px) {
-  .logotype--svg-container {
-    /* grid-row: 1; */
-    margin-top: var(--header-height-desktop);
-    padding-top: 0;
-  }
-}
-
-@media only screen and (min-width: 760px) and (max-width: 1360px) and (max-height: 760px) {
-  .intro-text-container {
-    grid-column: 1 / 3!important;
-  }
-}
-
-/* @media only screen and (min-width: 1100px) and (max-width: 1280px) and (min-height: 640px) {
-  .logotype--svg-container {
-    margin-top: 0!important;
-  }
-} */
-
-@media only screen and (min-width: 640px) and (max-width: 760px) and (min-height: 760px) {
-  .intro-text-container {
-    grid-column: 1 / 5!important;
-  }
-}
-
-@media only screen and (min-width: 640px) and (max-width: 1100px) {
-  .intro-text-desktop {
-    font-size: 1.25rem!important;
-  }
-}
-
-@media only screen and (max-width: 1100px) {
-  .logotype--svg-container {
-    grid-row: 2;
-    grid-column: 2 / 5;
-    margin-top: 0;
-    margin-top: -44px;
-  }
-}
-
-@media only screen and (min-width: 760px) {
-  .intro-text-desktop {
-    font-size: 1.5rem;
-  }
-}
-
-@media only screen and (max-width: 760px) {
-  .intro-text-desktop {
-    grid-column: 1 / 5;
-  }
-}
-
-@media only screen and (min-width: 760px) and (max-width: 1280px)  {
-  .intro-text-container {
-    grid-column: 1 / 3;
-  }
-}
-
-
-@media only screen and (min-width: 1280px) {
-  .logotype--svg-container {
-    grid-row: 1;
-  }
-  .intro-text-container {
-    grid-column: 1 / 2!important;
-  }
-}
-
-@media only screen and (min-width: 1280px) {
-  .intro-text-container {
-    grid-row: 1;
-    grid-column: 1 / 2;
-  }
-}
-
-@media only screen and (min-width: 640px) and (max-width: 840px)  {
-  .intro-text-container {
-    grid-column: 1 / 5;
-  }
-}
-
-@media only screen and (min-width: 1440px) {
-  .intro-text-desktop {
-    font-size: 1.5rem!important;
-  }
-}
 
 @media only screen and (min-width: 1360px) {
   #aboutTriggerdesktop {
@@ -1618,13 +1458,6 @@ section {
 }
 
 @media only screen and (max-width: 640px) {
-  .logotype--svg-container {
-    grid-column: 1 / 3!important;
-    margin-top: 0!important;
-  }
-}
-
-@media only screen and (max-width: 640px) {
   .content {
     grid-column: 1 / 3;
     grid-row: 1;
@@ -1633,7 +1466,6 @@ section {
     display: none;
   }
   .logotype--svg-container {
-    grid-column: 1 / 3;
     background-color: var(--background-color-primary-transp-2);
     backdrop-filter: blur(25px);
     -webkit-backdrop-filter: blur(25px);
@@ -1652,6 +1484,186 @@ section {
     min-height: fit-content;
     background-color: unset;
     padding: 0;
+  }
+}
+
+@media only screen and (min-width: 640px) {
+  .intro-text-container {
+    grid-row: 1;
+  }
+}
+
+@media only screen and (min-width: 960px) and (max-height: 840px) {
+  .logotype--svg-container {
+    grid-row: 1;
+    grid-column: 2 / 5;
+    margin-top: var(--header-height-desktop);
+  }
+  .intro-text-container {
+    grid-column: 1 / 2!important;
+  }
+}
+
+@media only screen and (min-width: 760px) and (min-height: 840px)  {
+  /* .intro-text-container {
+    grid-column: 1 / 3;
+  } */
+  .logotype--svg-container {
+    grid-column: 1 / 5;
+  }
+}
+
+@media only screen and (max-width: 960px) {
+  .intro-text-container {
+    grid-column: 1 / 3;
+  }
+}
+
+@media only screen and (max-width: 840px) {
+  .intro-text-container {
+    grid-column: 1 / 5;
+  }
+}
+
+@media only screen and (min-width: 640px) and (max-width: 840px) and (max-height: 760px) {
+  .logotype--svg-container {
+    opacity: 0;
+  }
+  .intro-text-container {
+    grid-column: 1 / 5;
+  }
+}
+
+@media only screen and (max-width: 1100px) and (max-height: 640px) {
+  .intro-text-container {
+    grid-column: 1 / 3;
+  }
+}
+
+@media only screen and (max-height: 520px) {
+  .logotype--svg-container {
+    opacity: 0;
+  }
+}
+
+@media only screen and (min-width: 840px) and (max-width: 1440px) and (max-height: 540px) {
+  .logotype--svg-container {
+    grid-column: 1 / 3;
+  }
+}
+
+@media only screen and (min-height: 540px) and (max-height: 640px) {
+  .intro-text-container {
+    grid-column: 1 / 3;
+  }
+}
+
+@media only screen and (min-width: 840px) {
+  .intro-text-container {
+    grid-column: 1 / 3;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .intro-text-container {
+    grid-column: 1 / 2;
+  }
+}
+
+@media only screen and (min-width: 640px) and (max-width: 760px) {
+  .intro-text-container {
+    grid-column: 1 / 5;
+  }
+}
+
+@media only screen and (min-width: 640px) and (min-height: 960px) {
+  .logotype--svg-container {
+    grid-row: 2;
+    grid-column: 1 / 5;
+    margin-top: var(--header-height-desktop);
+  }
+}
+
+@media only screen and (min-width: 840px) and (max-width: 1080px) and (min-height: 920px) {
+  .logotype--svg-container {
+    grid-row: 2;
+    grid-column: 1 / 5;
+    margin-top: var(--header-height-desktop);
+  }
+}
+
+@media only screen and (min-width: 1280px) and (max-width: 1440px) and (min-height: 920px) {
+  .logotype--svg-container {
+    grid-row: 2!important;
+    /* margin-top: -88px; */
+  }
+}
+
+@media only screen and (min-width: 1080px) and (min-height: 840px) {
+  .logotype--svg-container {
+    grid-column: 2 / 5;
+    margin-top: var(--header-height-desktop);
+  }
+}
+
+@media only screen and (min-width: 1681px) and (max-width: 2100px) and (min-height: 840px) {
+  .logotype--svg-container {
+    grid-row: 2!important;
+    margin-top: -132px;
+  }
+  .intro-text-container {
+    grid-column: 1 / 2!important;
+  }
+}
+
+@media only screen and (min-width: 2100px) and (min-height: 840px) {
+  .logotype--svg-container {
+    grid-row: 1;
+  }
+}
+
+@media only screen and (min-width: 1280px) and (min-height: 840px) {
+  .logotype--svg-container {
+    grid-row: 1;
+  }
+}
+
+@media only screen and (min-width: 640px) and (max-width: 760PX) {
+  .logotype--svg-container {
+    margin-top: -2rem;
+  }
+}
+
+@media only screen and (min-width: 640px) and (max-width: 1360px) and (max-height: 760px) {
+  .logotype--svg-container {
+    grid-column: 2 / 5!important;
+    margin-top: -88px;
+  }
+  .intro-text-container {
+    grid-column: 1 / 3;
+  }
+}
+
+@media only screen and (min-width: 640px) and (max-width: 1360px) and (max-height: 760px) {
+  .logotype--svg-container {
+    grid-column: 3 / 5!important;
+    margin-top: var(--header-height-desktop);
+    grid-row: 1;
+  }
+  .intro-text-container {
+    grid-column: 1 / 3!important;
+  }
+}
+
+@media only screen and (min-width: 840px) and (max-width: 1360px) and (min-height: 760px) {
+  .intro-text-desktop {
+    font-size: 1.25rem;
+  }
+}
+
+@media only screen and (min-width: 1360px) and (max-height: 640px) {
+  .logotype--svg-container {
+    grid-column: 3 / 5!important;
   }
 }
 
