--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1493,6 +1493,12 @@ section {
   }
 }
 
+/* @media only screen and (min-width: 640px) and (min-height: 840px) {
+  .intro-text-container {
+    grid-column: 1 / 3;
+  }
+} */
+
 @media only screen and (min-width: 960px) and (max-height: 840px) {
   .logotype--svg-container {
     grid-row: 1;
@@ -1522,6 +1528,9 @@ section {
 @media only screen and (max-width: 840px) {
   .intro-text-container {
     grid-column: 1 / 5;
+  }
+  .intro-text-desktop {
+    font-size: 1.25rem;
   }
 }
 
@@ -1558,11 +1567,11 @@ section {
   }
 }
 
-@media only screen and (min-width: 960px) {
+/* @media only screen and (min-width: 1360px) and (min-height: 840px) {
   .intro-text-container {
     grid-column: 1 / 3;
   }
-}
+} */
 
 @media only screen and (min-width: 1440px) {
   .intro-text-container {
@@ -1636,28 +1645,46 @@ section {
 
 @media only screen and (min-width: 640px) and (max-width: 1360px) and (max-height: 760px) {
   .logotype--svg-container {
+    /* grid-column: 3 / 5!important; */
+    margin-top: var(--header-height-desktop);
+    /* grid-row: 1; */
+  }
+  /* .intro-text-container {
+    grid-column: 1 / 3!important;
+  } */
+}
+
+@media only screen and (min-width: 640px) and (max-width: 1360px) and (max-height: 760px) {
+  .logotype--svg-container {
     grid-column: 2 / 5!important;
-    margin-top: -88px;
+    margin-top: var(--header-height-desktop);
   }
   .intro-text-container {
     grid-column: 1 / 3;
   }
 }
 
-@media only screen and (min-width: 640px) and (max-width: 1360px) and (max-height: 760px) {
+@media only screen and (min-width: 640px) and (max-width: 960px) and (max-height: 760px) {
   .logotype--svg-container {
-    grid-column: 3 / 5!important;
-    margin-top: var(--header-height-desktop);
-    grid-row: 1;
-  }
-  .intro-text-container {
-    grid-column: 1 / 3!important;
+    margin-top: -5rem;
   }
 }
 
-@media only screen and (min-width: 840px) and (max-width: 1360px) and (min-height: 760px) {
+@media only screen and (min-width: 1100px) and (max-width: 1360px) and (min-height: 760px) {
   .intro-text-desktop {
     font-size: 1.25rem;
+  }
+}
+
+@media only screen and (min-width: 1440px){
+  .intro-text-desktop {
+    font-size: 1.25rem;
+  }
+}
+
+@media only screen and (min-width: 960px) and (max-width: 1360px) and (min-height: 760px) {
+  .intro-text-container {
+    grid-column: 1 / 3;
   }
 }
 
