--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1601,10 +1601,10 @@ section {
   }
 }
 
-@media only screen and (min-width: 1280px) and (max-width: 1440px) and (min-height: 920px) {
+@media only screen and (min-width: 1280px) and (max-width: 1440px) and (min-height: 840px) {
   .logotype--svg-container {
     grid-row: 2!important;
-    /* margin-top: -88px; */
+    margin-top: -44px!important;
   }
 }
 
@@ -1678,13 +1678,29 @@ section {
 
 @media only screen and (min-width: 1440px){
   .intro-text-desktop {
-    font-size: 1.25rem;
+    font-size: 1.25rem!important;
   }
 }
 
-@media only screen and (min-width: 960px) and (max-width: 1360px) and (min-height: 760px) {
+@media only screen and (min-width: 960px) and (max-width: 1440px) and (max-height: 840px) {
   .intro-text-container {
-    grid-column: 1 / 3;
+    grid-column: 1 / 2!important;
+  }
+}
+
+
+@media only screen and (min-width: 1280px) {
+  .intro-text-desktop {
+    font-size: 1rem;
+  }
+}
+
+@media only screen and (min-width: 960px) and (max-width: 1440px) and (min-height: 840px) {
+  .intro-text-container {
+    grid-column: 1 / 3!important;
+  }
+  .intro-text-desktop {
+    font-size: 1.25rem;
   }
 }
 
