--- a/styles/styles.css
+++ b/styles/styles.css
@@ -744,7 +744,7 @@ section {
 
 .parallax--cv-sub-header--container {
   position: sticky;
-  top: 0;
+  top: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -762,7 +762,7 @@ section {
   flex-direction: column;
   gap: 1rem;
   height: fit-content;
-  background-color: var(--background-color-primary);
+  /* background-color: var(--background-color-primary); */
   grid-column: 3 / 5;
 
 }
@@ -905,9 +905,9 @@ section {
   .parallax--cv-sub-header--container {
     grid-column: 1 / 3;
   }
-  .parallax--cv-sub-header--container:nth-child(1) {
+  /* .parallax--cv-sub-header--container:nth-child(1) {
     top: 1rem;
-  }
+  } */
   .parallax--cv-experience--container:nth-child(1) {
     top: 0;
     padding-top: 1rem;
@@ -5117,7 +5117,7 @@ svg#menuPlusClose.menu--svg-arrow-down {
 }
 
 .top-base {
-  top: 1rem;
+  top: 1rem!important;
 }
 
 .top-header-height {
@@ -5409,6 +5409,9 @@ svg#menuPlusClose.menu--svg-arrow-down {
 }
 
 @media only screen and (max-width: 640px) {
+  .md\:pt-header-height {
+    padding-top: var(--header-height-desktop);
+  }
   .md\:mt-negative-s {
     margin-top: -1rem;
   }
@@ -6053,6 +6056,9 @@ svg#menuPlusClose.menu--svg-arrow-down {
 }
 
 @media only screen and (min-width: 640px) {
+  .lg\:pt-0 {
+    padding-top: 0;
+  }
   .lg\:relative {
     position: relative;
   }
