--- a/styles/styles.css
+++ b/styles/styles.css
@@ -452,7 +452,7 @@ section {
 }
 
 .intro-text-desktop {
-  font-size: 1rem;
+  /* font-size: 1rem; */
   grid-column: 1 / 2;
   grid-row: 1;
 }
@@ -1684,11 +1684,11 @@ section {
   }
 }
 
-@media only screen and (min-width: 1440px){
+/* @media only screen and (min-width: 1440px){
   .intro-text-desktop {
     font-size: 1.25rem!important;
   }
-}
+} */
 
 @media only screen and (min-width: 960px) and (max-width: 1440px) and (max-height: 840px) {
   .intro-text-container {
@@ -2110,11 +2110,11 @@ section {
   }
 }
 
-@media screen and (max-height: 760px) {
+/* @media screen and (max-height: 760px) {
   .contact-form {
     display: none;
   }
-}
+} */
 
 .contact-form input::placeholder {
   color: var(--color-primary);
